Review: Getting familiar with Qrisp tutorial

--- a/documentation/source/general/tutorial/tutorial.ipynb
+++ b/documentation/source/general/tutorial/tutorial.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## Creating a QuantumVariable\n",
     "\n",
-    "The central building block of Qrisp algorithms is the [QuantumVariable](/reference/Quantum%20Types/Quantum%20Variable.html). A QuantumVariable hides the qubit management from the user, enables human readable in- and outputs, strong typing via class inheritance, infix arithmetic syntax and much more. Creating a QuantumVariable is simple:"
+    "The central building block of Qrisp algorithms is the [QuantumVariable](../../reference/Core/QuantumVariable.rst). A QuantumVariable hides the qubit management from the user, enables human readable in- and outputs, strong typing via class inheritance, infix arithmetic syntax and much more. Creating a QuantumVariable is simple:"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "Here, 5 refers to the number of qubits the QuantumVariable represents.\n",
     "QuantumVariables allow for convenient quantum function construction and evaluation, since a QuantumVariable carries all the information that is relevant for performing quantum operations on it.\n",
     "\n",
-    "QuantumVariables can be low-level manipulated by calling gate application functions on them:"
+    "QuantumVariables can be low-level manipulated by calling [gate application functions](../../reference/Primitives/Gate%20functions.rst) on them:"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "source": [
     "Note that the Z gate is applied to all qubits of `qv` since there is no qubit specified.\n",
     "\n",
-    "In order to take a look at the generated circuit, we call `print` on the QuantumSession in which `qv` is registered:"
+    "In order to take a look at the generated circuit, we call `print` on the [QuantumSession](../../reference/Core/QuantumSession.rst) in which `qv` is registered:"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "\n",
     "In this case, the qubits are not ready to use for other purposes as they still are in a non-trivial state. If `qv` is entangled to other qubits, a simple reset would result in a non-unitary collapse of superposition. We would need to perform a procedure which is commonly called uncomputation.\n",
     "\n",
-    "QuantumVariables can be thought of as the abstract parent class of more special types. One example is the [QuantumChar](/reference/Quantum%20Types/QuantumChar.html):"
+    "QuantumVariables can be thought of as the abstract parent class of more special types. One example is the [QuantumChar](../../reference/Quantum Types/QuantumChar.rst):"
    ]
   },
   {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "49504a86",
    "metadata": {},
    "outputs": [],
@@ -201,13 +201,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulating 5 qubits.. |                                                      | [  0%]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "{'e': 1.0}                                                                           \u001b[2K\n"
      ]
     }
@@ -221,7 +214,7 @@
    "id": "828f4805",
    "metadata": {},
    "source": [
-    "This command queries a simulator which evaluates the compiled quantum circuit. The measurement results are returned as bitstrings, which are then converted to the corresponding outcome value. Here, the 1.0 corresponds to the probability of the outcome `\"e\"`.\n",
+    "This command queries a simulator which evaluates the compiled quantum circuit. The measurement results are returned as bitstrings, which are then converted to the corresponding outcome value. Here, the 1.0 corresponds to the probability of the outcome `'e'`.\n",
     "\n",
     "In order to bring some quantumness into the script, we can entangle it to our previously created QuantumVariable:"
    ]
@@ -250,7 +243,7 @@
    "id": "a5fc237c",
    "metadata": {},
    "source": [
-    "This brings the 0-th qubit of `qch` into a superposition and therefore `\"f\"` now appears with 50% probability.\n",
+    "This brings the 0-th qubit of `qch` into a superposition and therefore `'f'` now appears with 50% probability.\n",
     "\n",
     "If we want to apply further processing to the measurement results, we can retrieve them as a dictionary using the `get_measurement` method:"
    ]
@@ -317,7 +310,7 @@
    "id": "d48e9ce1",
    "metadata": {},
    "source": [
-    "Qrisp has full compatibility to Qiskit featuring convenient importing and exporting of Qiskit circuits:"
+    "Qrisp has full compatibility to Qiskit featuring convenient importing and exporting of Qiskit [circuits](../../reference/Circuit%20Manipulation/QuantumCircuit.rst):"
    ]
   },
   {
@@ -335,12 +328,12 @@
    "id": "6afcee6a",
    "metadata": {},
    "source": [
-    "It is also possible to run Qrisp code directly on IBM Quantum hardware using a [QiskitBackend](/reference/Interface/QiskitBackend.html), on an IQM Quantum Computer using [IQMBackend](/reference/Interface/IQMBackend.html) or on an AQT Quantum Computer using [AQTBackend](/reference/Interface/AQTBackend.html)."
+    "It is also possible to run Qrisp code directly on IBM Quantum hardware using a [QiskitBackend](../../reference/Backend%20Interface/QiskitBackend.rst), on an IQM Quantum Computer using [IQMBackend](../../reference/Backend%20Interface/IQMBackend.rst) or on an AQT Quantum Computer using [AQTBackend](../../reference/Backend%20Interface/AQTBackend.rst)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2ecfe1c6",
    "metadata": {},
    "outputs": [],
@@ -354,7 +347,7 @@
     "# results = qch.get_measurement(backend = brisbane_qrisp)\n",
     "# print(results)\n",
     "\n",
-    "# Make sure to install the qrisp with the IQM interface: pip install qrisp[iqm]\n",
+    "# Make sure to install qrisp with the IQM interface: pip install qrisp[iqm]\n",
     "# from qrisp.interface import IQMBackend\n",
     "# iqm_garnet = IQMBackend(api_token = \"IQM_RESONANCE_API_TOKEN\", \n",
     "#                           device_instance = \"garnet\")\n",
@@ -408,7 +401,7 @@
    "id": "f9d247f0",
    "metadata": {},
    "source": [
-    "This oracle receives a [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html) `qf` and evaluates the square. Subsequently it determines whether the result is equal to 0.25, which returns the [QuantumBool](/reference/Quantum%20Types/QuantumBool.html) `temp_qbool`. Finally, we perform a Z gate on `temp_qbool`. Note the [`auto_uncompute`](/reference/Miscellaneous/auto_uncompute.html) decorator, which automatically uncomputes all temporary values of this function (i.e. the result of the multiplication and `temp_qbool`). \n",
+    "This oracle receives a [QuantumFloat](../../reference/Quantum%20Types/QuantumFloat.rst) `qf` and evaluates the square. Subsequently it determines whether the result is equal to 0.25, which returns the [QuantumBool](../../reference/Quantum%20Types/QuantumBool.rst) `temp_qbool`. Finally, we perform a Z gate on `temp_qbool`. Note the [auto_uncompute](../../reference/Core/Uncomputation.rst) decorator, which automatically uncomputes all temporary values of this function (i.e. the result of the multiplication and `temp_qbool`). \n",
     "\n",
     "To inspect the circuit, we create a QuantumFloat, evaluate the oracle and call `print` on the `.qs` attribute:"
    ]
@@ -553,7 +546,7 @@
    "id": "34ebbe93",
    "metadata": {},
    "source": [
-    "First we create the QuantumFloat which will contain the solution. Note that the QuantumFloat constructor creates unsigned floats by default. We determine the number of iterations according to the formula given [here](https://arxiv.org/abs/quant-ph/9909040), taking into consideration that we expect two solutions ($S = \\\\{0.5, -0.5\\\\}$). The next step is then to bring `qf` into uniform superposition, followed by the Grover iterations and finalized by a measurement (which is called by `print`). The [diffuser](/reference/Grover/diffuser.html) function applies the diffusion operator required for Grover's algorithm.\n",
+    "First we create the QuantumFloat which will contain the solution. Note that the QuantumFloat constructor creates unsigned floats by default. We determine the number of iterations according to the formula given [here](https://arxiv.org/abs/quant-ph/9909040), taking into consideration that we expect two solutions ($S = \\\\{0.5, -0.5\\\\}$). The next step is then to bring `qf` into uniform superposition, followed by the Grover iterations and finalized by a measurement (which is called by `print`). The [diffuser](../../reference/Primitives/Grover%20tools.rst) function applies the diffusion operator required for Grover's algorithm.\n",
     "\n",
     "## Quantum Phase Estimation\n",
     "\n",
@@ -561,7 +554,13 @@
     "\n",
     "Given is a unitary $U$ and quantum state $\\ket{\\psi}$ which is an eigenvector of $U$:\n",
     "\n",
-    "$$U \\ket{\\psi} = \\text{exp}(i 2 \\pi \\phi)\\ket{\\psi}$$"
+    "$$U \\ket{\\psi} = \\text{exp}(i 2 \\pi \\phi)\\ket{\\psi}$$\n",
+    "\n",
+    "Applying quantum phase estimation to $U$ and $\\ket{\\psi}$ returns a quantum variable containing an estimate for the value of $\\phi$.\n",
+    "\n",
+    "$$\\text{QPE}_{U} \\ket{\\psi} \\ket{0} = \\ket{\\psi} \\ket{\\phi}$$\n",
+    "\n",
+    "It can be implemented within a few lines of code in Qrisp:"
    ]
   },
   {
@@ -594,9 +593,9 @@
    "source": [
     "The first step here is to create the QuantumFloat `res` which will contain the result. The first argument specifies the amount of mantissa qubits, the QuantumFloat should contain and the second argument specifies the exponent. Having $n$ mantissa qubits and and exponent of $-n$ means that this QuantumFloat can represent the values between 0 and 1 with a granularity of $2^{-n}$.\n",
     "\n",
-    "Subsequently we apply an Hadamard gate to all qubits of `res` and continue by performing controlled evaluations of $U$. This is achieved by using the `with control(res[i]):` statement. This statement enters a [ControlEnvironment](/reference/Quantum%20Environment/ControlEnvironment.html) such that every quantum operation inside the indented code block will be controlled on the i-th qubit of `res`. We conclude the algorithm by performing an inverse [quantum fourier transformation](/reference/Algorithms/QFT.html) of `res`.\n",
+    "Subsequently we apply a Hadamard gate to all qubits of `res` and continue by performing controlled evaluations of $U$. This is achieved by using the `with control(res[i]):` statement. This statement enters a [ControlEnvironment](../../reference/Quantum%20Environments/ConditionEnvironment.rst) such that every quantum operation inside the indented code block will be controlled on the i-th qubit of `res`. We conclude the algorithm by performing an inverse [Quantum Fourier Transform](../../reference/Primitives/QFT.rst) of `res`.\n",
     "\n",
-    "Note that compared to the [Qiskit implementation](https://qiskit.org/documentation/stubs/qiskit.circuit.library.PhaseEstimation.html) the Qrisp version comes with the convenience that $U$ can be given as a Python function (instead of a Circuit object) allowing for slim and elegant evaluations. Furthermore, the line `with control(res[i]):` invokes a ControlEnvironment, which can yield significant gains in performance if `qpe` is called within another ControlEnvironment (compared to the Qiskit approach of simply synthesizing the double controlled version for every participating gate).\n",
+    "Note that compared to the [Qiskit implementation](https://qiskit.org/documentation/stubs/qiskit.circuit.library.PhaseEstimation.html) the Qrisp version comes with the convenience that $U$ can be given as a Python function (instead of a QuantumCircuit object) allowing for slim and elegant evaluations. Furthermore, the line `with control(res[i]):` invokes a ControlEnvironment, which can yield significant gains in performance if `qpe` is called within another ControlEnvironment (compared to the Qiskit approach of simply synthesizing the double controlled version for every participating gate).\n",
     "\n",
     "We test our code with a simple example:"
    ]
@@ -636,7 +635,7 @@
     "\n",
     "$$\\frac{1}{2} \\text{QPE}_{U}(\\ket{00} + \\ket{01} + \\ket{10} + \\ket{11})\\ket{0} = \\frac{1}{2} (\\ket{00}\\ket{0} + \\ket{10}\\ket{\\phi_1} + \\ket{01}\\ket{\\phi_2} +\\ket{11}\\ket{\\phi_1 + \\phi_2})$$\n",
     "\n",
-    "We verify by measuring `psi` together with `res` using the [multi_measurement](/reference/Core/multi_measurement.html) function:"
+    "We verify by measuring `psi` together with `res` using the `multi_measurement` function:"
    ]
   },
   {
@@ -660,7 +659,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "qrisp",
    "language": "python",
    "name": "python3"
   },
@@ -674,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
