--- a/documentation/source/general/tutorial/H2.ipynb
+++ b/documentation/source/general/tutorial/H2.ipynb
@@ -15,11 +15,11 @@
     "\\def\\NN{\\bf N}\n",
     "$$\n",
     "\n",
-    "Quantum computing offers a promising avenue for simulating complex molecular systems, potentially revolutionizing fields like drug discovery, materials science, and chemical engineering. At the heart of this capability lies Hamiltonian simulation, a powerful technique that allows us to model the quantum behavior of molecules with exponentially less resources compared to classical computers. In this tutorial, we'll explore how to simulate molecules using Hamiltonian simulation techniques implemented in Qrisp. Since version 0.5, Qrisp provides a user-friendly interface for simulating quantum many body systems, making it a suitable tool for tackling complex quantum chemistry problems. We'll cover the following key aspects:\n",
+    "Quantum computing offers a promising avenue for simulating complex molecular systems, potentially revolutionizing fields like drug discovery, materials science, and chemical engineering. At the heart of this capability lies Hamiltonian simulation, a powerful technique that allows us to model the quantum behavior of molecules with exponentially less resources compared to classical computers. In this tutorial, we'll explore how to simulate molecules using Hamiltonian simulation techniques implemented in Qrisp. Qrisp provides a user-friendly interface for simulating quantum many body systems, making it a suitable tool for tackling complex quantum chemistry problems. We'll cover the following key aspects:\n",
     "\n",
-    "-   The fundamentals of Hamiltonian simulation and the second quantization\n",
-    "-   Loading molecular data into Qrisp\n",
-    "-   Performing Hamiltonian simulation\n",
+    "-   [The fundamentals of Hamiltonian simulation and the second quantization](#Performing-Hamiltonian-simulation)\n",
+    "-   [Loading molecular data into Qrisp](#Loading-molecular-data-into-Qrisp)\n",
+    "-   [Performing Hamiltonian simulation](#Performing-Hamiltonian-simulation)\n",
     "\n",
     "By the end of this tutorial, you'll have a solid understanding of how to\n",
     "leverage Qrisp's capabilities to perform molecular simulations on\n",
@@ -49,7 +49,7 @@
     "<img src=\"https://www.qrisp.eu/_images/hydrogen_with_axes.png\" class=\"align-center\" width=\"400\" alt=\"image\" />\n",
     "\n",
     "This plot represents the real part of the amplitude of one of the basis\n",
-    "vectors (the one with \\$n = 4, k = 3, l = 1\\$ to be precise).\n",
+    "vectors (the one with $n = 4, k = 3, l = 1$ to be precise).\n",
     "\n",
     "The **second quantization** now describes how systems including\n",
     "*multiple particles* are treated. For this the so called ladder\n",
@@ -122,9 +122,9 @@
    "source": [
     "To learn more how to build and manipulate these expressions, please look\n",
     "at the documentation page of\n",
-    "[FermionicOperator](/reference/Operators/FermionicOperator.html). For instance, the\n",
+    "[FermionicOperator](../../reference/Operators/FermionicOperator.rst). For instance, the\n",
     "hermitian conjugate can be computed using the\n",
-    "[.dagger](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.dagger.html#qrisp.operators.fermionic.FermionicOperator.dagger) method."
+    "[.dagger](../../reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.dagger.rst) method."
    ]
   },
   {
@@ -152,7 +152,7 @@
    "source": [
     "To apply the Pauli exclusion principle but also other anti-commutation\n",
     "laws for simplifaction, you can call the\n",
-    "[.reduce](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.reduce.html#qrisp.operators.fermionic.FermionicOperator.reduce) method."
+    "[.reduce](../../reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.reduce.rst) method."
    ]
   },
   {
@@ -222,15 +222,49 @@
    "id": "c56ea0f2",
    "metadata": {},
    "source": [
-    "This gives us an instance of the [QubitOperator](/reference/Operators/QubitOperator.html#qrisp.operators.qubit.QubitOperator)\n",
+    "This gives us an instance of the [QubitOperator](../../reference/Operators/QubitOperator.rst)\n",
     "class. What is the difference to a\n",
-    "[FermionicOperator](/reference/Operators/FermionicOperator.html)? While FermionicOperators\n",
+    "[FermionicOperator](../../reference/Operators/FermionicOperator.rst)? While FermionicOperators\n",
     "model the more abstract fermion space, qubit operators represent\n",
     "operators on the qubit space $(\\mathbb{C}^2)^{\\otimes n}$ and can be\n",
     "simulated and evaluated efficiently using a quantum computer. In\n",
     "particular, QubitOperators can represent tensor products of the\n",
     "following operators $X,Y,Z,A,C,P^0,P^1,I$. Make sure to read the\n",
-    "[documentation](/reference/Operators/QubitOperator.html#qrisp.operators.qubit.QubitOperator) to learn about their definition!"
+    "[documentation](../../reference/Operators/QubitOperator.rst) to learn about their definition!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05452d6c",
+   "metadata": {},
+   "source": [
+    "### Dynamics\n",
+    "\n",
+    "Both boson and fermion systems evolve under the Schrödinger equation:\n",
+    "\n",
+    "$$i \\hbar \\frac{d}{dt}\\ket{\\phi} = H \\ket{\\phi}$$\n",
+    "    \n",
+    "Where $H$ is a hermitian operator called Hamiltonian. *Hamiltonian simulation* is the procedure of mimicing the dynamics of a physical system described by a Hamiltonian $H$ using a quantum computer. In other words: creating the state $\\ket{\\phi, t} = \\text{exp}(iHt)\\ket{\\phi, 0}$ artificially to evaluate some of its properties.\n",
+    "\n",
+    "For bosonic systems, the Hamiltonian can only be a linear combination of products of the bosonic ladder operators. The equivalent holds for fermionic systems.\n",
+    "\n",
+    "$$H = \\sum_{n=0}^{\\infty} \\sum_{i_1, \\ldots, i_n} \\sum_{j_1, \\ldots, j_n} h_{i_1 \\ldots i_n, j_1 \\ldots j_n} a_{i_1}^{\\dagger} \\ldots a_{i_n}^{\\dagger} a_{j_1} \\ldots a_{j_n}$$\n",
+    "    \n",
+    "Where all $h \\in \\mathbb{R}$. An example Hamiltonian could therefore look like this\n",
+    "\n",
+    "$$H = h_{01}(a_0a^\\dagger_1 + a_1a^\\dagger_0) + h_{00}a_0a^\\dagger_0$$\n",
+    "    \n",
+    "The particular values of the coefficients (like $h_{01}$ and $h_{00}$) are determined by the specifics of the system. For many systems of interest these numbers involve the computation of some integrals - a task that can be efficiently performed on the classical computer.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7806591e",
+   "metadata": {},
+   "source": [
+    "## Loading molecular data into Qrisp\n",
+    "\n",
+    "If you don't feel like solving integrals right now, we've got you covered! Qrisp has a convenient interface to [PySCF](https://pyscf.org/), which loads the molecular data directly as [FermionicOperator](../../reference/Operators/FermionicOperator.rst). For that you need PySCF installed (``pip install pyscf``). If you're on Windows you might need to do some [WSL gymnastics](https://harshityadav95.medium.com/jupyter-notebook-in-windows-subsystem-for-linux-wsl-8b46fdf0a536>).\n"
    ]
   },
   {
@@ -243,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.181210462015197*a0*a1*c2*c3 + 0.181210462015197*a0*c1*c2*a3 - 1.25330978664598*c0*a0 + 0.674755926814448*c0*a0*c1*a1 + 0.482500939335616*c0*a0*c2*a2 + 0.663711401350814*c0*a0*c3*a3 + 0.181210462015197*c0*a1*a2*c3 - 0.181210462015197*c0*c1*a2*a3 - 1.25330978664598*c1*a1 + 0.663711401350814*c1*a1*c2*a2 + 0.482500939335616*c1*a1*c3*a3 - 0.475068848772178*c2*a2 + 0.697651504490463*c2*a2*c3*a3 - 0.475068848772178*c3*a3\n"
+      "-0.181210462015197*a0*a1*c2*c3 + 0.181210462015197*a0*c1*c2*a3 - 1.25330978664598*c0*a0 + 0.674755926814448*c0*a0*c1*a1 + 0.482500939335617*c0*a0*c2*a2 + 0.663711401350814*c0*a0*c3*a3 + 0.181210462015197*c0*a1*a2*c3 - 0.181210462015197*c0*c1*a2*a3 - 1.25330978664598*c1*a1 + 0.663711401350814*c1*a1*c2*a2 + 0.482500939335617*c1*a1*c3*a3 - 0.475068848772179*c2*a2 + 0.697651504490461*c2*a2*c3*a3 - 0.475068848772179*c3*a3\n"
      ]
     }
    ],
@@ -261,11 +295,10 @@
    "metadata": {},
    "source": [
     "This snippet uses the\n",
-    "[.from_pyscf](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.from_pyscf.html#qrisp.operators.fermionic.FermionicOperator.from_pyscf)\n",
-    "method to load the [FermionicOperator](/reference/Operators/FermionicOperator.html)\n",
-    "representing the orbitals of the Dihydrogen molecule \\$H_2\\$. Or to be\n",
-    "more precise, two hydrogen nuclei seperated by \\$0.74\\$ Angstrom. We\n",
-    "take a look at the ladder operators:"
+    "[.from_pyscf](../../reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.from_pyscf.rst)\n",
+    "method to load the FermionicOperator\n",
+    "representing the orbitals of the Dihydrogen molecule $H_2$. Or to be\n",
+    "more precise, two hydrogen nuclei seperated by $0.74$ Angstrom."
    ]
   },
   {
@@ -286,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.181210462015197*A(0)*A(1)*C(2)*C(3) - 0.181210462015197*A(0)*C(1)*C(2)*A(3) - 0.181210462015197*C(0)*A(1)*A(2)*C(3) + 0.181210462015197*C(0)*C(1)*A(2)*A(3) - 1.25330978664598*P1(0) + 0.674755926814448*P1(0)*P1(1) + 0.482500939335616*P1(0)*P1(2) + 0.663711401350814*P1(0)*P1(3) - 1.25330978664598*P1(1) + 0.663711401350814*P1(1)*P1(2) + 0.482500939335616*P1(1)*P1(3) - 0.475068848772178*P1(2) + 0.697651504490463*P1(2)*P1(3) - 0.475068848772178*P1(3)\n"
+      "0.181210462015197*A(0)*A(1)*C(2)*C(3) - 0.181210462015197*A(0)*C(1)*C(2)*A(3) - 0.181210462015197*C(0)*A(1)*A(2)*C(3) + 0.181210462015197*C(0)*C(1)*A(2)*A(3) - 1.25330978664598*P1(0) + 0.674755926814448*P1(0)*P1(1) + 0.482500939335617*P1(0)*P1(2) + 0.663711401350814*P1(0)*P1(3) - 1.25330978664598*P1(1) + 0.663711401350814*P1(1)*P1(2) + 0.482500939335617*P1(1)*P1(3) - 0.475068848772179*P1(2) + 0.697651504490461*P1(2)*P1(3) - 0.475068848772179*P1(3)\n"
      ]
     }
    ],
@@ -300,12 +333,12 @@
    "id": "37587f00",
    "metadata": {},
    "source": [
-    "# Performing Hamiltonian simulation\n",
+    "## Performing Hamiltonian simulation\n",
     "\n",
     "To perform Hamiltonian simulation, we use the\n",
-    "[.trotterization](/reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.trotterization.html#qrisp.operators.fermionic.FermionicOperator.trotterization)\n",
+    "[.trotterization](../../reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.trotterization.rst)\n",
     "method, which gives us a Python function that performs a simulation of\n",
-    "the Hamiltonian on a [QuantumVariable](/reference/Quantum%20Types/QuantumVariable.html)."
+    "the Hamiltonian on a [QuantumVariable](../..//reference/Core/QuantumVariable.rst)."
    ]
   },
   {
@@ -334,7 +367,7 @@
    "metadata": {},
    "source": [
     "This snippet defines a function `state_prep` that first initializes the\n",
-    "state \\$\\ket{\\phi, t = 0}\\$, which is a superposition of 2 electrons in\n",
+    "state $\\ket{\\phi, t = 0}$, which is a superposition of 2 electrons in\n",
     "the lower two orbitals and a state of 1 electron in the highest orbital.\n",
     "Second, we perform the Hamiltonian simulation."
    ]
@@ -349,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                                                     \u001b[2K"
+      "                                                                                     \u001b[2K\r"
      ]
     }
    ],
@@ -395,12 +428,11 @@
    "id": "61c626eb",
    "metadata": {},
    "source": [
-    "For each state \\$i\\$, this operator leaves the \"electron at \\$i\\$\" state\n",
-    "invariant (i.e. a +1 contribution) and maps the \"no electron at \\$i\\$\"\n",
+    "For each state $i$, this operator leaves the \"electron at $i$\" state\n",
+    "invariant (i.e. a +1 contribution) and maps the \"no electron at $i$\"\n",
     "state to a 0 contribution. Its eigenvalues therefore indicate the number\n",
-    "of electrons in the system. To evaluate the expectation value \\$\\bra{\\phi}\n",
-    "N \\ket{\\phi}\\$, we call the\n",
-    "[.expectation_value](/reference/Operators/generated/qrisp.operators.qubit.QubitOperator.expectation_value.html#qrisp.operators.qubit.QubitOperator.expectation_value)\n",
+    "of electrons in the system. To evaluate the expectation value $\\bra{\\phi}N \\ket{\\phi}$, we call the\n",
+    "[.expectation_value](../../reference/Operators/generated/qrisp.operators.qubit.QubitOperator.expectation_value.rst)\n",
     "method."
    ]
   },
@@ -414,7 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.499946870683243                                                                    \u001b[2K\n"
+      "1.4984592498140474                                                                   \u001b[2K\n"
      ]
     }
    ],
@@ -428,8 +460,8 @@
    "id": "7ab67d23",
    "metadata": {},
    "source": [
-    "We see that the expectaction value is (almost) 1.5 because \\$(2+1)/2 =\n",
-    "1.5\\$, which is expected assuming that the dynamics under the given\n",
+    "We see that the expectaction value is (almost) 1.5 because $(2+1)/2 =\n",
+    "1.5$, which is expected assuming that the dynamics under the given\n",
     "Hamiltonian doesn't create particles out of nowhere (or destroys them).\n",
     "The value is not exact because of statistical noise - we can increase\n",
     "the precision (which will however require more measurements from the\n",
@@ -446,7 +478,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5000503253125317                                                                   \u001b[2K\n"
+      "1.4999932478124958                                                                   \u001b[2K\n"
      ]
     }
    ],
@@ -462,7 +494,7 @@
     "This concludes our little tutorial on Hamiltonian simulation. We hope\n",
     "you could learn something and feel motivated to explore more systems and\n",
     "techniques! Make sure to also check out the\n",
-    "[MolecularPotentialEnergyCurve](/reference/Examples/MolecularPotentialEnergyCurve.html)\n",
+    "[molecular potential energy curves](../../reference/Examples/MolecularPotentialEnergyCurve.rst)\n",
     "example to learn how to compute the ground state for both types of\n",
     "operators!\n",
     "\n",
@@ -479,7 +511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4969716289448518                                                                   \u001b[2K\n"
+      "1.4971841462118798                                                                   \u001b[2K\n"
      ]
     }
    ],
@@ -512,7 +544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "qrisp",
    "language": "python",
    "name": "python3"
   },
@@ -526,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
