Some more minor improvements for Qrisp tutorial

--- a/documentation/source/general/tutorial/tutorial.ipynb
+++ b/documentation/source/general/tutorial/tutorial.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "49504a86",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2ecfe1c6",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
    "id": "f9d247f0",
    "metadata": {},
    "source": [
-    "This oracle receives a [QuantumFloat](../../reference/Quantum%20Types/QuantumFloat.rst) `qf` and evaluates the square. Subsequently it determines whether the result is equal to 0.25, which returns the [QuantumBool](../../reference/Quantum%20Types/QuantumBool.rst) `temp_qbool`. Finally, we perform a Z gate on `temp_qbool`. Note the [auto_uncompute](../../reference/Core/Uncomputation.rst) decorator, which automatically uncomputes all temporary values of this function (i.e. the result of the multiplication and `temp_qbool`). \n",
+    "This oracle receives a [QuantumFloat](../../reference/Quantum%20Types/QuantumFloat.rst) `qf` and evaluates the square. Subsequently it determines whether the result is equal to 0.25, which returns the [QuantumBool](../../reference/Quantum%20Types/QuantumBool.rst) `temp_qbool`. Finally, we perform a Z gate on `temp_qbool`. Note the `auto_uncompute` decorator, which automatically uncomputes all temporary values of this function (i.e. the result of the multiplication and `temp_qbool`). You can find more information about Qrisps automatic uncomputation in [Uncomputation](../../reference/Core/Uncomputation.rst).\n",
     "\n",
     "To inspect the circuit, we create a QuantumFloat, evaluate the oracle and call `print` on the `.qs` attribute:"
    ]
@@ -546,7 +546,7 @@
    "id": "34ebbe93",
    "metadata": {},
    "source": [
-    "First we create the QuantumFloat which will contain the solution. Note that the QuantumFloat constructor creates unsigned floats by default. We determine the number of iterations according to the formula given [here](https://arxiv.org/abs/quant-ph/9909040), taking into consideration that we expect two solutions ($S = \\\\{0.5, -0.5\\\\}$). The next step is then to bring `qf` into uniform superposition, followed by the Grover iterations and finalized by a measurement (which is called by `print`). The [diffuser](../../reference/Primitives/Grover%20tools.rst) function applies the diffusion operator required for Grover's algorithm.\n",
+    "First we create the QuantumFloat which will contain the solution. Note that the QuantumFloat constructor creates unsigned floats by default. We determine the number of iterations according to the formula given [here](https://arxiv.org/abs/quant-ph/9909040), taking into consideration that we expect two solutions ($S = \\{0.5, -0.5\\}$). The next step is then to bring `qf` into uniform superposition, followed by the Grover iterations and finalized by a measurement (which is called by `print`). The [diffuser](../../reference/Primitives/Grover%20tools.rst) function applies the diffusion operator required for Grover's algorithm.\n",
     "\n",
     "## Quantum Phase Estimation\n",
     "\n",
@@ -635,7 +635,7 @@
     "\n",
     "$$\\frac{1}{2} \\text{QPE}_{U}(\\ket{00} + \\ket{01} + \\ket{10} + \\ket{11})\\ket{0} = \\frac{1}{2} (\\ket{00}\\ket{0} + \\ket{10}\\ket{\\phi_1} + \\ket{01}\\ket{\\phi_2} +\\ket{11}\\ket{\\phi_1 + \\phi_2})$$\n",
     "\n",
-    "We verify by measuring `psi` together with `res` using the `multi_measurement` function:"
+    "We verify by measuring `psi` together with `res` using the `multi_measurement` method:"
    ]
   },
   {
