Review Sudoku tutorial

--- a/documentation/source/general/tutorial/Sudoku.ipynb
+++ b/documentation/source/general/tutorial/Sudoku.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "Similar to the classical version, in our Qrispy implementation of this quantum\n",
     "algorithm, a backtracking problem is specified by a maximum recursion depth\n",
-    "and two functions, each returning a QuantumBool respectively:\n",
+    "and two functions, each returning a [QuantumBool](../../reference/Quantum%20Types/QuantumBool.rst) respectively:\n",
     "\n",
     "**accept**: Is the function that returns True, if called on a node, satisfying the\n",
     "specifications.\n",
@@ -95,7 +95,7 @@
     "**reject**: Is the function that returns True, if called on a node, representing a\n",
     "branch that should no longer be considered.\n",
     "\n",
-    "Also required is a QuantumVariable that specifies the branches\n",
+    "Also required is a [QuantumVariable](../../reference/Core/QuantumVariable.rst) that specifies the branches\n",
     "that can be taken by the algorithm at each node.\n",
     "\n",
     "**Node encoding**\n",
@@ -109,7 +109,7 @@
     "found under the attribute `h`.\n",
     "\n",
     "To fully identify a node, we also need to specify the path to take starting\n",
-    "at the root. This path is encoded in a QuantumArray, which can be found\n",
+    "at the root. This path is encoded in a [QuantumArray](../../reference/Core/QuantumArray.rst), which can be found\n",
     "under the attribute `branch_qa`. To fit into the setting of height encoding,\n",
     "this array contains the reversed path.\n",
     "\n",
@@ -119,9 +119,9 @@
     "is encoded by\n",
     "\n",
     "$$\n",
-    "\\ket{\\text{branch_qa}} &= \\ket{0}\\ket{0}\\ket{0}\\ket{1}\\ket{1}\\\\\n",
-    "\\ket{\\text{h}} &= \\ket{3} = \\ket{00010}\\\\\n",
-    "\\ket{x} &= \\ket{\\text{branch_qa}}\\ket{\\text{h}}\n",
+    "\\ket{\\text{branch qa}} &= \\ket{0}\\ket{0}\\ket{0}\\ket{1}\\ket{1}\\\\\n",
+    "\\ket{\\text{h}} = \\ket{3} &= \\ket{00010}\\\\\n",
+    "\\ket{x} &= \\ket{\\text{branch qa}}\\ket{\\text{h}}\n",
     "$$\n",
     "\n",
     "\n",
@@ -299,7 +299,7 @@
    "id": "74ce50ba",
    "metadata": {},
    "source": [
-    "For obvious reasons, we add an edge only if at least one of the participating nodes represents an assigned field. Furthermore, we distinguish between quantum-quantum edges, i.e., a comparison between two empty fields,  and classical-quantum edges. This is because for any given node the latter type can be batched together into a single QuantumDictionary call. To capture this fact, we write a helper function, which extracts the comparisons in the following form:\n",
+    "For obvious reasons, we add an edge only if at least one of the participating nodes represents an assigned field. Furthermore, we distinguish between quantum-quantum edges, i.e., a comparison between two empty fields,  and classical-quantum edges. This is because for any given node the latter type can be batched together into a single [QuantumDictionary](../../reference/Core/QuantumDictionary.rst) call. To capture this fact, we write a helper function, which extracts the comparisons in the following form:\n",
     "\n",
     "* quantum-quantum comparisons in the form `list[(int, int)]` where the integers indicate the position of the corresponding empty field\n",
     "* classical-quantum comparisons in the form `dict({int : list[int]})`. Here the keys of the dictionary indicate the position of the corresponding empty field and the values are the list of numbers to compare to."
@@ -979,7 +979,7 @@
     "Finally, with the accept and reject funtions, we can encode our Sudoku puzzle as a backtracking tree and **detect** the existence of a solution.\n",
     "For this, the tree is initialized in the state $\\ket{r}$ (indicating the root) and quantum phase estimation (QPE) for the quantum walk operator with the specified `precision` is applied.\n",
     "The algorithm returns \"Solution exists\" if the 0 component of the quantum phase estimation result\n",
-    "has a higher probability then 3/8 = 0.375. If the probability is less than 0.25, the algorithm returns \"No solution exists\". Otherwise, the precision of the phase estimation has to be increased. To make the result still simulable on a laptop, we will decrease the amount of empty fields to 3. If you want to try higher more empty fields, we recommend using the IBM cloud MPS simulator. Find out how to deploy it in Qrisp Qrisp101."
+    "has a higher probability then 3/8 = 0.375. If the probability is less than 0.25, the algorithm returns \"No solution exists\". Otherwise, the precision of the phase estimation has to be increased. To make the result still simulable on a laptop, we will decrease the amount of empty fields to 3. If you want to try higher more empty fields, we recommend using the Qiskit Aer MPS simulator. Find out how to deploy it using the [QiskitBackend](../../reference/Backend%20Interface/QiskitBackend.rst)."
    ]
   },
   {
