Review Shor tutorial

--- a/documentation/source/general/tutorial/Shor.ipynb
+++ b/documentation/source/general/tutorial/Shor.ipynb
@@ -34,37 +34,37 @@
     "Given the number to factorize $N \\in \\mathbb{N}$, the first step of Shor's algorithm is to find the [order](https://en.wikipedia.org/wiki/Multiplicative_order) $r$ of a random number $a \\in \\mathbb{Z}/N\\mathbb{Z}$. Here,\n",
     "\n",
     "* $a$ is a random number $<N$, which is coprime to $N$ i.e., $\\text{GCD}(a, N) = 1$ (otherwise $\\text{GCD}(a, N)$ is a factor and we are done already).\n",
-    "* $r$ is the order of $a$ i.e. a number such that $a^r = 1(\\text{mod} N)$.\n",
+    "* $r$ is the order of $a$ i.e. a number such that $a^r = 1 \\pmod N$.\n",
     "* $a \\in \\mathbb{Z}/N\\mathbb{Z}$ is the [Quotient Ring](https://en.wikipedia.org/wiki/Quotient_ring) of integers modulo $N$.\n",
     "\n",
     "Assume now, that for a given classical number $x$, we have access to an operator $U_x$, which acts as\n",
     "\n",
-    "$$U_x \\ket{y} = \\ket{(xy) \\text{mod} N}$$\n",
+    "$$U_x \\ket{y} = \\ket{(xy) \\pmod N}$$\n",
     "    \n",
     "that is, $U_x$ performs an in-place modular multiplication with $x$ on any quantum number $\\ket{y}$.\n",
     "\n",
     "The next step of the construction is defining the state $\\ket{u_s}$ for an arbitrary $s < r$\n",
     "\n",
-    "$$\\ket{u_s} = \\frac{1}{\\sqrt{r}} \\sum_{k = 0}^{r-1} \\text{exp}\\left(\\frac{-2\\pi i s k}{r}\\right)\\ket{x^k \\text{mod} N}$$\n",
+    "$$\\ket{u_s} = \\frac{1}{\\sqrt{r}} \\sum_{k = 0}^{r-1} \\text{exp}\\left(\\frac{-2\\pi i s k}{r}\\right)\\ket{x^k \\pmod N}$$\n",
     "    \n",
     "Applying $U$ to such a state reveals, that it is indeed an eigenvector:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "U \\ket{u_s} &= \\frac{1}{\\sqrt{r}} \\sum_{k = 0}^{r-1} \\text{exp}\\left(\\frac{-2\\pi i s k}{r}\\right) U_x \\ket{x^k \\text{mod} N}\\\\\n",
-    "&= \\frac{1}{\\sqrt{r}} \\sum_{k = 0}^{r-1} \\text{exp}\\left(\\frac{-2\\pi i s k}{r}\\right) \\ket{x^{k+1} \\text{mod} N}\\\\\n",
+    "U \\ket{u_s} &= \\frac{1}{\\sqrt{r}} \\sum_{k = 0}^{r-1} \\text{exp}\\left(\\frac{-2\\pi i s k}{r}\\right) U_x \\ket{x^k \\pmod N}\\\\\n",
+    "&= \\frac{1}{\\sqrt{r}} \\sum_{k = 0}^{r-1} \\text{exp}\\left(\\frac{-2\\pi i s k}{r}\\right) \\ket{x^{k+1} \\pmod N}\\\\\n",
     "&= \\text{exp}\\left(\\frac{2\\pi i s}{r}\\right) \\ket{u_s}\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Therefore if we apply quantum phase estimation (with sufficient precision) to $U_x$ and $\\ket{u_1}$ we have basically solved the problem:\n",
+    "Therefore, if we apply [quantum phase estimation](../../reference/Primitives/QFT.rst) (with sufficient precision) to $U_x$ and $\\ket{u_1}$ we have basically solved the problem:\n",
     "\n",
     "$$\\text{QPE}_{U_x} \\ket{u_1} \\ket{0} = \\ket{u_1} \\ket{\\phi_1}$$\n",
     "  \n",
     "Where $\\ket{\\phi_1}$ is a state that, if measured, is close to $\\frac{1}{r}$ with high probability.\n",
     "\n",
     "An important point here is that we don't need to call the operator $U_x$ for $2^j$ times to achieve $U_x^{2^j}$, which is required for the quantum phase estimation. Instead\n",
-    "we can classically precompute $x^{2^j} (\\text{mod}) N$ and use $U_x^{2^j} = U_{x^{2^j}}$.\n",
+    "we can classically precompute $x^{2^j} \\pmod N$ and use $U_x^{2^j} = U_{x^{2^j}}$.\n",
     "\n",
     "As you might have noticed however, there is a problem. We would need the solution $r$ to prepare $\\ket{u_1}$, so this idea is not feasible. What we can do however\n",
     "is preparing a superposition of different $\\ket{u_s}$.\n",
@@ -82,11 +82,11 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "In the next step, we measure the second register to acquire a value $h$ which is close to a number of the form $\\frac{s}{r}$. Using the [continued fraction algorithm](https://en.wikipedia.org/wiki/Continued_fraction) we can turn $h$ into a fraction $\\frac{\\tilde{s}}{\\tilde{r}}$. $\\tilde{r}$ is therefore a potential candidate for the solution $r$. Finally, we verify our potential solutin using $a^r = 1 (\\text{mod}) N$ or (if neccessary) measure another $h$.\n",
+    "In the next step, we measure the second register to acquire a value $h$ which is close to a number of the form $\\frac{s}{r}$. Using the [continued fraction algorithm](https://en.wikipedia.org/wiki/Continued_fraction) we can turn $h$ into a fraction $\\frac{\\tilde{s}}{\\tilde{r}}$. $\\tilde{r}$ is therefore a potential candidate for the solution $r$. Finally, we verify our potential solutin using $a^r = 1 \\pmod N$ or (if neccessary) measure another $h$.\n",
     "\n",
     "The next step is to transform the equation, defining $r$\n",
     "\n",
-    "$$a^r = 1 (\\text{mod})N \\Leftrightarrow a^r -1 = 0 (\\text{mod}) N$$\n",
+    "$$a^r = 1 \\pmod N \\Leftrightarrow a^r -1 = 0 \\pmod N$$\n",
     "\n",
     "Combining this with the definition of the modulus operation, we can see that $N$ must be a factor of $a^r - 1$ (written $N | (a^r - 1)$). If $r$ is even, we can write\n",
     "\n",
@@ -119,7 +119,7 @@
    "id": "6e50a36b",
    "metadata": {},
    "source": [
-    "The central concept of our implementation is the [QuantumModulus](/reference/Quantum%20Types/QuantumModulus.html) class. This quantum type can be used to represent and process elements of a [Quotient Ring](https://en.wikipedia.org/wiki/Quotient_ring), which is basically just a fancy wording for \"numbers that operate under modular arithmetic\"."
+    "The central concept of our implementation is the [QuantumModulus](../../reference/Quantum%20Types/QuantumModulus.rst) class. This quantum type can be used to represent and process elements of a [Quotient Ring](https://en.wikipedia.org/wiki/Quotient_ring), which is basically just a fancy wording for \"numbers that operate under modular arithmetic\"."
    ]
   },
   {
@@ -140,7 +140,7 @@
    "id": "49022854",
    "metadata": {},
    "source": [
-    "This snippet creates such a [QuantumVariable](/reference/Quantum%20Types/Quantum%20Variable.html) with modulus $N = 13$. Subsequently we encode the value 8. The defining feature of this type is the fact that arithmetic is always modular."
+    "This snippet creates such a [QuantumVariable](../../reference/Core/Quantum%20Variable.rst) with modulus $N = 13$. Subsequently we encode the value 8. The defining feature of this type is the fact that arithmetic is always modular."
    ]
   },
   {
@@ -204,7 +204,7 @@
    "source": [
     "As you can see under the hood, there is a lot of complexity, however due to systematic development and testing, a lot of it can be hidden from the user. Feel free to try out the in-place multiplication `*=`!\n",
     "\n",
-    "Using the [QuantumModulus](/reference/Quantum%20Types/QuantumModulus.html) class allows us to implement Shor's algorithm within a few lines of code! For a simple example, let us factor $N = 99$ using $a = 10$."
+    "Using the QuantumModulus class allows us to implement Shor's algorithm within a few lines of code! For a simple example, let us factor $N = 99$ using $a = 10$."
    ]
   },
   {
@@ -256,7 +256,7 @@
    "id": "5e9faa83",
    "metadata": {},
    "source": [
-    "Note the `exponent` keyword of the [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html) constructor. It indicates that this QuantumFloat can represent numbers up to the precision $2^{-(2n+1)}$. After construction, we apply a Hadamard gate to each qubit as is customary in quantum phase estimation.\n",
+    "Note the `exponent` keyword of the [QuantumFloat](../../reference/Quantum%20Types/QuantumFloat.rst) constructor. It indicates that this QuantumFloat can represent numbers up to the precision $2^{-(2n+1)}$. After construction, we apply a Hadamard gate to each qubit as is customary in quantum phase estimation.\n",
     "\n",
     "We can now code the main loop:"
    ]
@@ -280,7 +280,7 @@
    "id": "efd80088",
    "metadata": {},
    "source": [
-    "Note that we have $x=a^{2^i}$ at the i-th iteration. Such a procedure is called repeated squaring and reduces the classical resources for the computation of $x$ in each iteration. We use the [control](/reference/Core/Environment%20Stack.html#controlenvironment) environment to make the operation conditional on the state of a qubit.\n",
+    "Note that we have $x=a^{2^i}$ at the i-th iteration. Such a procedure is called repeated squaring and reduces the classical resources for the computation of $x$ in each iteration. We use the [control](../../reference/Quantum%20Environments/ControlEnvironment.rst) environment to make the operation conditional on the state of a qubit.\n",
     "\n",
     "Finally, we conclude the phase estimation with the inverse quantum Fourier transformation and perform a measurement."
    ]
@@ -406,7 +406,7 @@
    "source": [
     "Aaaaand we are done! ⏲️\n",
     "\n",
-    "To highlight once more how much Qrisp simplifies the construction, we summarize the code of the quantum subroutine in a single function. The function uses [QuantumModulus](/reference/Quantum%20Types/QuantumModulus.html), [QuantumFloat](/reference/Quantum%20Types/QuantumFloat.html), [control](/reference/Core/Environment%20Stack.html#controlenvironment) environment, and [QFT](/reference/Miscellaneous%20Functions/QFT.html) to implement the algorithm:"
+    "To highlight once more how much Qrisp simplifies the construction, we summarize the code of the quantum subroutine in a single function. The function uses [QuantumModulus](../../reference/Quantum%20Types/QuantumModulus.rst), [QuantumFloat](../../reference/Quantum%20Types/QuantumFloat.rst), [control](../../reference/Quantum%20Environments/ConditionEnvironment.rst) environment, and [QFT](../../reference/Primitives/QFT.rst) to implement the algorithm:"
    ]
   },
   {
@@ -436,7 +436,7 @@
    "source": [
     "11 lines - feel free to compare with other implementations!\n",
     "\n",
-    "To learn how to compile this algorithm optimized for fault-tolerant backends and deploy an exponentially faster adder, make sure to check out the [next tutorial](/reference/general/tutorial/FT_compilation.html)!"
+    "To learn how to compile this algorithm optimized for fault-tolerant backends and deploy an exponentially faster adder, make sure to check out the Fault-tolerant compilation tutorial!"
    ]
   }
  ],
